[gd_scene load_steps=7 format=2]

[ext_resource path="res://Cards/Card.tscn" type="PackedScene" id=1]
[ext_resource path="res://Level/UI/HUD.gd" type="Script" id=2]
[ext_resource path="res://Level/UI/DiscardPile.gd" type="Script" id=3]
[ext_resource path="res://Level/UI/DrawPile.gd" type="Script" id=4]
[ext_resource path="res://Level/UI/Hand.gd" type="Script" id=5]
[ext_resource path="res://Sounds/Shuffle.wav" type="AudioStream" id=6]

[node name="HUD" type="Node2D"]
script = ExtResource( 2 )

[node name="DrawPile" type="Position2D" parent="."]
position = Vector2( 585, 1001 )
rotation = -0.0748405
scale = Vector2( 1.2, 1.2 )
script = ExtResource( 4 )

[node name="Card5" parent="DrawPile" instance=ExtResource( 1 )]
editor_placed_card = true
is_active = false

[node name="Card6" parent="DrawPile" instance=ExtResource( 1 )]
editor_placed_card = true
is_active = false

[node name="Hand" type="Position2D" parent="."]
position = Vector2( 960, 934 )
scale = Vector2( 1.8, 1.8 )
script = ExtResource( 5 )

[node name="1" type="Position2D" parent="Hand"]
position = Vector2( -82.2222, -13.8889 )
rotation = -0.376973

[node name="Card" parent="Hand/1" instance=ExtResource( 1 )]
editor_placed_card = true

[node name="2" type="Position2D" parent="Hand"]
position = Vector2( 11, -33.5 )

[node name="Card2" parent="Hand/2" instance=ExtResource( 1 )]
editor_placed_card = true

[node name="3" type="Position2D" parent="Hand"]
position = Vector2( 106.667, -11.6667 )
rotation = 0.50306

[node name="Card3" parent="Hand/3" instance=ExtResource( 1 )]
editor_placed_card = true

[node name="DiscardPile" type="Position2D" parent="."]
position = Vector2( 1335, 1007 )
rotation = 0.101713
scale = Vector2( 1.2, 1.2 )
script = ExtResource( 3 )

[node name="Card4" parent="DiscardPile" instance=ExtResource( 1 )]
editor_placed_card = true
is_active = false

[node name="SoundShuffle" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -15.731
pitch_scale = 0.8
bus = "Cards"
